fix for not showing the search results over the ad
z-index set to 1

--- a/HapMap/recipebook/static/recipebook/css/index.css
+++ b/HapMap/recipebook/static/recipebook/css/index.css
@@ -25,6 +25,7 @@
   margin: 0 !important;
   position: absolute !important;
   width: calc(100% - 40px);
+  z-index: 1;
 }
 
 @media (min-width: 768px) {
